[gd_scene load_steps=21 format=3 uid="uid://okb2q4c6yu0j"]

[ext_resource type="Script" path="res://scripts/home.gd" id="1_6c28v"]
[ext_resource type="Texture2D" uid="uid://b618m337d6yes" path="res://game assets/randomassets/play.png" id="4_ubvtr"]
[ext_resource type="Texture2D" uid="uid://cplw3mhvjts8w" path="res://game assets/randomassets/pixel-art-settings-button-with-gear-icon-for-8bit-game-on-white-background-vector-removebg-preview.png" id="4_wk7je"]
[ext_resource type="Texture2D" uid="uid://13rjrkuejhtd" path="res://game assets/randomassets/setbut.png" id="5_hswfu"]
[ext_resource type="Texture2D" uid="uid://cciaehfamfaje" path="res://game assets/randomassets/ur_mouse_pad_small_flatlay_square_600x600-removebg-preview.png" id="5_roer8"]
[ext_resource type="Texture2D" uid="uid://ny53wqshk0n0" path="res://game assets/randomassets/Untitled_design-removebg-preview.png" id="6_ik501"]
[ext_resource type="Texture2D" uid="uid://cjktkm0w33441" path="res://game assets/randomassets/Untitled_design__1_-removebg-preview.png" id="7_tw84q"]
[ext_resource type="Texture2D" uid="uid://8dt8piwmxeo7" path="res://game assets/randomassets/fai.png" id="8_a1s13"]
[ext_resource type="Texture2D" uid="uid://bco15fwrj157e" path="res://game assets/randomassets/gift.png" id="10_67od1"]
[ext_resource type="FontFile" uid="uid://we2mlgcipndx" path="res://game assets/font/editundo.ttf" id="12_tsst7"]
[ext_resource type="Texture2D" uid="uid://cfumcashv6x8e" path="res://scenes/Untitled design (13).png" id="13_1edno"]
[ext_resource type="Texture2D" uid="uid://bip5tkkf74t43" path="res://game assets/Coin/Coin_Still.png" id="13_24s85"]
[ext_resource type="Texture2D" uid="uid://cslp0n6tuxrx" path="res://game assets/randomassets/apple.png" id="14_6nrpr"]
[ext_resource type="Texture2D" uid="uid://drvmdnxl51jee" path="res://scenes/Untitled design (14).png" id="14_yluhm"]
[ext_resource type="Texture2D" uid="uid://ctrowv55ycqi5" path="res://game assets/levels/level1.png" id="15_rak3u"]
[ext_resource type="Texture2D" uid="uid://c2al5pptrbi2d" path="res://game assets/levels/level2.png" id="16_37cfn"]
[ext_resource type="Texture2D" uid="uid://d0alfk6mkf1d" path="res://game assets/levels/level3.png" id="17_rdvkh"]
[ext_resource type="Texture2D" uid="uid://d3cj86f1judt3" path="res://game assets/levels/level4.png" id="18_c0864"]
[ext_resource type="Texture2D" uid="uid://bl0qygiqt31vw" path="res://game assets/levels/level5.png" id="19_u2mts"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mw5cr"]
load_path = "res://.godot/imported/pngtree-pixel-art-play-button-png-image_14902519-removebg-preview.png-588ffa063ba6b5ef222ba219807e2f75.ctex"

[node name="home" type="Node2D"]
position = Vector2(0, 15)
script = ExtResource("1_6c28v")

[node name="playb" type="TextureButton" parent="."]
offset_left = 830.0
offset_top = 418.0
offset_right = 1067.0
offset_bottom = 649.0
texture_normal = SubResource("CompressedTexture2D_mw5cr")
texture_hover = ExtResource("4_ubvtr")
ignore_texture_size = true
stretch_mode = 5

[node name="settings" type="TextureButton" parent="."]
offset_left = 1073.0
offset_top = 510.0
offset_right = 1187.0
offset_bottom = 591.0
texture_normal = ExtResource("4_wk7je")
texture_hover = ExtResource("5_hswfu")
ignore_texture_size = true
stretch_mode = 5

[node name="quit" type="TextureButton" parent="."]
offset_left = 1852.0
offset_top = -6.0
offset_right = 1906.0
offset_bottom = 64.0
texture_normal = ExtResource("5_roer8")
ignore_texture_size = true
stretch_mode = 5

[node name="avatar" type="TextureButton" parent="."]
offset_left = 682.0
offset_top = 475.0
offset_right = 866.0
offset_bottom = 630.0
texture_normal = ExtResource("6_ik501")
texture_hover = ExtResource("8_a1s13")
ignore_texture_size = true
stretch_mode = 5

[node name="store" type="TextureButton" parent="."]
offset_left = 874.0
offset_top = 630.0
offset_right = 1023.0
offset_bottom = 736.0
texture_normal = ExtResource("7_tw84q")
texture_hover = ExtResource("10_67od1")
ignore_texture_size = true
stretch_mode = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(43, 31)
scale = Vector2(3.75, 4)
texture = ExtResource("13_24s85")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(37, 97)
scale = Vector2(0.554688, 0.554688)
texture = ExtResource("14_6nrpr")

[node name="coinlabel" type="Label" parent="."]
offset_left = 83.0
offset_top = 11.0
offset_right = 151.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_tsst7")
theme_override_font_sizes/font_size = 50
text = "100"

[node name="fruit label" type="Label" parent="."]
offset_left = 85.0
offset_top = 76.0
offset_right = 153.0
offset_bottom = 131.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_tsst7")
theme_override_font_sizes/font_size = 50
text = "100"

[node name="soundd" type="TextureButton" parent="."]
offset_left = 17.0
offset_top = 875.0
offset_right = 118.0
offset_bottom = 987.0
texture_normal = ExtResource("13_1edno")
texture_pressed = ExtResource("14_yluhm")
texture_disabled = ExtResource("14_yluhm")
ignore_texture_size = true
stretch_mode = 5

[node name="level1" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 186.0
offset_right = 119.0
offset_bottom = 283.0
texture_normal = ExtResource("15_rak3u")
ignore_texture_size = true
stretch_mode = 5

[node name="level2" type="TextureButton" parent="."]
offset_left = 23.0
offset_top = 272.0
offset_right = 120.0
offset_bottom = 379.0
texture_normal = ExtResource("16_37cfn")
ignore_texture_size = true
stretch_mode = 5

[node name="level3" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = 364.0
offset_right = 120.0
offset_bottom = 469.0
texture_normal = ExtResource("17_rdvkh")
ignore_texture_size = true
stretch_mode = 5

[node name="level4" type="TextureButton" parent="."]
offset_left = 23.0
offset_top = 457.0
offset_right = 121.0
offset_bottom = 560.0
texture_normal = ExtResource("18_c0864")
ignore_texture_size = true
stretch_mode = 5

[node name="level5" type="TextureButton" parent="."]
offset_left = 23.0
offset_top = 548.0
offset_right = 123.0
offset_bottom = 653.0
texture_normal = ExtResource("19_u2mts")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="playb" to="." method="_on_playb_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="avatar" to="." method="_on_avatar_pressed"]
[connection signal="pressed" from="store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="store" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="soundd" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="soundd" to="." method="_on_soundd_pressed"]
[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="level5" to="." method="_on_level_5_pressed"]
